package modelo.elementos;

public interface DispositivoDeAzar {
    public abstract int lanzar();
}
